tests/smt2/error/assume-interpolant-error.smt2
(declare-const p Bool)
(declare-const q Bool)
(declare-const r Bool)
(define-const pq Bool (=> p q))
(define-const qr Bool (=> q r))
(check-sat-assuming (p pq qr (not r)))
(get-interpolants (and p pq) (and qr (not r)))
(get-interpolants (and p pq) (and qr))
(define-const nr Bool (not r))
(check-sat-assuming (p pq qr nr))
(get-interpolants (and p pq) (and nr))
(get-interpolants (and p pq) (and qr nr))